--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -334,7 +334,7 @@
     "Due Date Changed" : {
 
     },
-    "Due Date: %@" : {
+    "Due date: %@" : {
 
     },
     "E-mail" : {
@@ -469,7 +469,7 @@
     "Important" : {
 
     },
-    "In Progress" : {
+    "In progress" : {
 
     },
     "Indiana (East) (-05:00/-04:00)" : {
@@ -622,6 +622,9 @@
     "Muscat (+04:00/+04:00)" : {
 
     },
+    "My progress" : {
+
+    },
     "My Progress" : {
 
     },
@@ -670,10 +673,10 @@
     "Noronha (-02:00/-02:00)" : {
 
     },
-    "Not Started" : {
+    "Not started" : {
 
     },
-    "Not Submitted" : {
+    "Not submitted" : {
 
     },
     "Notebook" : {
@@ -882,7 +885,7 @@
     "Sorry, I don't have an answer for that right now." : {
 
     },
-    "Sort By" : {
+    "Sort by" : {
 
     },
     "Srednekolymsk (+11:00/+11:00)" : {
