Fixing the layout of the WrappingHStack. It was shifting the position of the current line item down by the height of the current line, not by the height of the prior line height

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -442,7 +442,7 @@
     "Hello, Career!" : {
 
     },
-    "Hello! Which course you'd like to discuss today?" : {
+    "Hello! Which course would you like to discuss today?" : {
 
     },
     "Helsinki (+02:00/+03:00)" : {
