--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -20,9 +20,6 @@
         }
       }
     },
-    "%@ Attempts Allowed" : {
-      "comment" : "The number of attempts allowed for this assignment."
-    },
     "%lld Attempts Allowed" : {
       "comment" : "The number of attempts allowed for this assignment.",
       "localizations" : {
@@ -61,7 +58,7 @@
     "Add a Note (Optional)" : {
 
     },
-    "Add Comment" : {
+    "Add comment" : {
 
     },
     "Add your text entry" : {
@@ -151,11 +148,14 @@
     "Attempt" : {
 
     },
-    "Attempt History" : {
+    "Attempt history" : {
 
     },
     "Attempts" : {
 
+    },
+    "Attempts Allowed" : {
+      "comment" : "The number of attempts allowed for this assignment."
     },
     "Auckland (+12:00/+13:00)" : {
 
@@ -304,7 +304,7 @@
     "Darwin (+09:30)" : {
 
     },
-    "Delete Draft" : {
+    "Delete draft" : {
 
     },
     "Dhaka (+06:00/+06:00)" : {
@@ -388,7 +388,7 @@
     "Fiji (+12:00/+12:00)" : {
 
     },
-    "File Upload" : {
+    "File upload" : {
 
     },
     "Filter" : {
@@ -640,7 +640,7 @@
     "Name: %@" : {
 
     },
-    "New Attempt" : {
+    "New attempt" : {
 
     },
     "New Caledonia (+11:00/+11:00)" : {
@@ -843,10 +843,10 @@
     "Scoring Weight Changed" : {
 
     },
-    "Select a course" : {
+    "Select a aubmission type" : {
 
     },
-    "Select a Submission Type" : {
+    "Select a course" : {
 
     },
     "Send" : {
@@ -897,7 +897,7 @@
     "St. Petersburg (+03:00)" : {
 
     },
-    "Start Quiz" : {
+    "Start quiz" : {
 
     },
     "Status: " : {
@@ -906,7 +906,7 @@
     "Stockholm (+01:00/+02:00)" : {
 
     },
-    "Submit Assignment" : {
+    "Submit assignment" : {
 
     },
     "Submit Attempt" : {
@@ -1008,7 +1008,7 @@
     "Unsupported Item" : {
 
     },
-    "Upload File" : {
+    "Upload file" : {
 
     },
     "Urumqi (+06:00/+06:00)" : {
@@ -1089,10 +1089,10 @@
     "Your note has been saved" : {
 
     },
-    "Your Submission" : {
+    "Your submission" : {
 
     },
-    "Your Text Submission" : {
+    "Your text submission" : {
 
     },
     "Your Uploaded Submission" : {
