SpeedGrader - Add grade summary (#3504)
refs: MBL-18905
affects: Teacher
release note: none

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -27252,6 +27252,9 @@
         }
       }
     },
+    "Late Penalty" : {
+
+    },
     "Letter grade" : {
       "localizations" : {
         "ar" : {
