--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -48291,6 +48291,9 @@
     "Word Count" : {
 
     },
+    "Write percentage here" : {
+
+    },
     "Write your Comment here" : {
       "extractionState" : "stale",
       "localizations" : {
