--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -88,6 +88,9 @@
     "Amsterdam (+01:00/+02:00)" : {
 
     },
+    "An error occurred while marking as done." : {
+
+    },
     "Announcement" : {
 
     },
