Add points variant

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -48294,6 +48294,9 @@
     "Write percentage here" : {
 
     },
+    "Write score here" : {
+
+    },
     "Write your Comment here" : {
       "extractionState" : "stale",
       "localizations" : {
