--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -885,6 +885,9 @@
     "Sorry, I don't have an answer for that right now." : {
 
     },
+    "Sorry, we were not able to display this page right now." : {
+
+    },
     "Sort By" : {
 
     },
@@ -955,6 +958,9 @@
 
     },
     "This assignment allows multiple attempts. Once you've made a submission, you can view it here." : {
+
+    },
+    "This content is locked and cannot be accessed at this time." : {
 
     },
     "This is where all your notes, taken directly within your learning objects, are stored and organized. It's your personal hub for keeping track of key insights, important excerpts, and reflections as you learn. Dive in to review or expand on your notes anytime!" : {
