If the user isn't enrolled in any courses, tell them to enroll before using Assist

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -505,6 +505,9 @@
     "Istanbul (+03:00/+03:00)" : {
 
     },
+    "It doesn't look like you have any courses available. Enroll in a course to get started." : {
+
+    },
     "Jakarta (+07:00)" : {
 
     },
