--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -130,9 +130,6 @@
     "Assignment Successfully Submitted!" : {
 
     },
-    "Assist" : {
-
-    },
     "Astana (+05:00/+05:00)" : {
 
     },
@@ -476,6 +473,9 @@
 
     },
     "I'm not able to rephrase this content" : {
+
+    },
+    "IgniteAI" : {
 
     },
     "Important" : {
