Add grade picker

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -38796,6 +38796,9 @@
         }
       }
     },
+    "Select Grade" : {
+
+    },
     "Select to change the roll call date" : {
       "localizations" : {
         "ar" : {
