[Horizon] Notebook Highlight Invalid Asset ID (#3502)

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -85,6 +85,9 @@
     "Amsterdam (+01:00/+02:00)" : {
 
     },
+    "An error occurred" : {
+
+    },
     "Announcement" : {
 
     },
@@ -877,6 +880,12 @@
 
     },
     "Something went wrong" : {
+
+    },
+    "Sorry, we were unable to find this item." : {
+
+    },
+    "Sort By" : {
 
     },
     "Sorry, can we try that again? Which course is it you'd like to discuss?" : {
