Fix: inbox issues
[ignore-commit-lint]

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -73,7 +73,7 @@
     "Alaska (-09:00/-08:00)" : {
 
     },
-    "All Messages" : {
+    "All messages" : {
 
     },
     "Almaty (+05:00/+05:00)" : {
@@ -85,7 +85,7 @@
     "Amsterdam (+01:00/+02:00)" : {
 
     },
-    "An error occurred" : {
+    "An error has occurred" : {
 
     },
     "Announcement" : {
@@ -256,10 +256,10 @@
     "Choose and complete one of the required items." : {
 
     },
-    "Choose File" : {
+    "Choose file" : {
 
     },
-    "Choose Photo or Video" : {
+    "Choose photo or video" : {
 
     },
     "Comments" : {
@@ -274,7 +274,7 @@
     "Completed" : {
 
     },
-    "Confirm Submission" : {
+    "Confirm submission" : {
 
     },
     "Confirmation" : {
@@ -296,9 +296,6 @@
 
     },
     "Create message" : {
-
-    },
-    "Create Message" : {
 
     },
     "Cuiaba (-04:00/-04:00)" : {
@@ -382,7 +379,7 @@
     "Excused" : {
 
     },
-    "External Tool" : {
+    "External tool" : {
 
     },
     "Feedback: " : {
@@ -571,7 +568,7 @@
     "Manaus (-04:00/-04:00)" : {
 
     },
-    "Mark as Done" : {
+    "Mark as done" : {
 
     },
     "Marshall Is. (+12:00/+12:00)" : {
@@ -846,10 +843,10 @@
     "Scoring Weight Changed" : {
 
     },
-    "Select a aubmission type" : {
+    "Select a course" : {
 
     },
-    "Select a course" : {
+    "Select a submission type" : {
 
     },
     "Send" : {
@@ -882,16 +879,13 @@
     "Something went wrong" : {
 
     },
-    "Sorry, we were unable to find this item." : {
-
-    },
-    "Sort By" : {
-
-    },
     "Sorry, can we try that again? Which course is it you'd like to discuss?" : {
 
     },
     "Sorry, I don't have an answer for that right now." : {
+
+    },
+    "Sorry, we were unable to find this item." : {
 
     },
     "Sort by" : {
@@ -918,7 +912,7 @@
     "Submit assignment" : {
 
     },
-    "Submit Attempt" : {
+    "Submit attempt" : {
 
     },
     "Submitted" : {
@@ -933,7 +927,7 @@
     "Taipei (+08:00)" : {
 
     },
-    "Take Photo or Video" : {
+    "Take photo or video" : {
 
     },
     "Tallinn (+02:00/+03:00)" : {
@@ -978,7 +972,7 @@
     "Time Zone" : {
 
     },
-    "Title/Subject" : {
+    "Title/subject" : {
 
     },
     "Tokelau Is. (+13:00/+13:00)" : {
@@ -1029,7 +1023,7 @@
     "Vienna (+01:00/+02:00)" : {
 
     },
-    "View Submission" : {
+    "View submission" : {
 
     },
     "View your progress and scores on the Learn page." : {
@@ -1104,7 +1098,7 @@
     "Your text submission" : {
 
     },
-    "Your Uploaded Submission" : {
+    "Your uploaded submission" : {
 
     },
     "Zagreb (+01:00/+02:00)" : {
