--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -85,7 +85,7 @@
     "Amsterdam (+01:00/+02:00)" : {
 
     },
-    "An error occurred" : {
+    "An error occurred while marking as done." : {
 
     },
     "Announcement" : {
@@ -469,6 +469,15 @@
     "How can I help you with this page?" : {
 
     },
+    "I don't have a summary for this content." : {
+
+    },
+    "I don't have any additional information for you." : {
+
+    },
+    "I'm not able to rephrase this content" : {
+
+    },
     "Important" : {
 
     },
@@ -494,6 +503,9 @@
 
     },
     "Istanbul (+03:00/+03:00)" : {
+
+    },
+    "It doesn't look like you have any courses available. Enroll in a course to get started." : {
 
     },
     "Jakarta (+07:00)" : {
@@ -658,16 +670,10 @@
     "No" : {
 
     },
-    "No additional information found." : {
-
-    },
     "No key takeaways found." : {
 
     },
     "No notification activity yet." : {
-
-    },
-    "No summary found." : {
 
     },
     "Norfolk Island (+11:00/+12:00)" : {
@@ -894,6 +900,9 @@
     "Sorry, I don't have an answer for that right now." : {
 
     },
+    "Sorry, we were not able to display this page right now." : {
+
+    },
     "Sort by" : {
 
     },
@@ -964,6 +973,9 @@
 
     },
     "This assignment allows multiple attempts. Once you've made a submission, you can view it here." : {
+
+    },
+    "This content is locked and cannot be accessed at this time." : {
 
     },
     "This is where all your notes, taken directly within your learning objects, are stored and organized. It's your personal hub for keeping track of key insights, important excerpts, and reflections as you learn. Dive in to review or expand on your notes anytime!" : {
