Relocate comments and delete separate tab
This reverts commit 70e06216c56e4b56d82c11695da0527f7d773555.

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -11242,6 +11242,7 @@
       }
     },
     "Comments" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
