fix: resolve conflicts
[ignore-commit-lint]
affects: Student, Teacher, Parent, Horizon

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -85,6 +85,9 @@
     "Amsterdam (+01:00/+02:00)" : {
 
     },
+    "An error has occurred" : {
+
+    },
     "An error occurred while marking as done." : {
 
     },
@@ -888,12 +891,6 @@
     "Something went wrong" : {
 
     },
-    "Sorry, we were unable to find this item." : {
-
-    },
-    "Sort By" : {
-
-    },
     "Sorry, can we try that again? Which course is it you'd like to discuss?" : {
 
     },
@@ -901,6 +898,9 @@
 
     },
     "Sorry, we were not able to display this page right now." : {
+
+    },
+    "Sorry, we were unable to find this item." : {
 
     },
     "Sort by" : {
