Add lettergrade option ranges, for percentages only
refs: MBL-19056
affects: Teacher, Student
release note: <Teacher only> Update SpeedGrader grading interface.

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -1,6 +1,16 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "%@ to %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ to %2$@"
+          }
+        }
+      }
+    },
     "%1$@, submitted on %2$@" : {
       "comment" : "Attempt 30, submitted on 2025. Feb 6. at 18:21",
       "localizations" : {
@@ -1760,6 +1770,19 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "%lld%%" : {
+
+    },
+    "< %@ to %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "< %1$@ to %2$@"
           }
         }
       }
