reordering suggested prompts [ignore-commit-lint]

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -85,6 +85,9 @@
     "Amsterdam (+01:00/+02:00)" : {
 
     },
+    "An error has occurred" : {
+
+    },
     "An error occurred while marking as done." : {
 
     },
