Add error for invalid grade input, fix decimal separator issue for non-US users

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "\"%@\" is not a valid grade." : {
+
+    },
     "%@ to %@" : {
       "localizations" : {
         "en" : {
@@ -26765,6 +26768,9 @@
           }
         }
       }
+    },
+    "Invalid Grade" : {
+
     },
     "It seems there aren't any valid submissions to grade." : {
       "localizations" : {
