WIP - Moving some of our cedar requests to use Pine instead. [ignore-commit-lint]

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -472,6 +472,9 @@
     "I don't have a summary for this content." : {
 
     },
+    "I don't have an answer for this." : {
+
+    },
     "I don't have any additional information for you." : {
 
     },
@@ -891,7 +894,7 @@
     "Sorry, can we try that again? Which course is it you'd like to discuss?" : {
 
     },
-    "Sorry, I don't have an answer for that right now." : {
+    "Sorry, I don't have an answer for this." : {
 
     },
     "Sorry, we were not able to display this page right now." : {
