Redesigned rubrics views implemented
refs: MBL-18834
affects: Teacher
release note: Introduced new design for SpeedGrader rubrics

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -31142,6 +31142,9 @@
         }
       }
     },
+    "Note" : {
+
+    },
     "OK" : {
       "localizations" : {
         "ar" : {
@@ -37804,6 +37807,9 @@
           }
         }
       }
+    },
+    "Rubric Note" : {
+
     },
     "Saving days late." : {
 
