Renaming a method call [ignore-commit-lint]

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -469,6 +469,9 @@
     "How can I help you with this page?" : {
 
     },
+    "I don't have a quiz for this content." : {
+
+    },
     "I don't have a summary for this content." : {
 
     },
