Adding a placeholder for the Assist chat [ignore-commit-lint]

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -118,6 +118,9 @@
     "Arizona (-07:00)" : {
 
     },
+    "Ask a question" : {
+
+    },
     "Assignment due dates" : {
 
     },
@@ -1000,9 +1003,6 @@
 
     },
     "Total: %@" : {
-
-    },
-    "Try Again" : {
 
     },
     "Ulaanbaatar (+08:00/+08:00)" : {
