SpeedGrader - Grade input UI per grading type (#3529)
refs: MBL-19056
affects: Teacher, Student
release note: <Teacher only> Update SpeedGrader grading interface.

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -1,6 +1,20 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "\"%@\" is not a valid grade." : {
+
+    },
+    "%@ to %@" : {
+      "comment" : "'100% to 94%', or '400 to 230 pts'",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ to %2$@"
+          }
+        }
+      }
+    },
     "%1$@, submitted on %2$@" : {
       "comment" : "Attempt 30, submitted on 2025. Feb 6. at 18:21",
       "localizations" : {
@@ -1760,6 +1774,20 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "%lld%%" : {
+
+    },
+    "< %@ to %@" : {
+      "comment" : "'< 94% to 84%', or '< 230 to 160 pts'",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "< %1$@ to %2$@"
           }
         }
       }
@@ -20497,6 +20525,7 @@
       }
     },
     "GPA" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -25971,6 +26000,9 @@
         }
       }
     },
+    "Hidden" : {
+
+    },
     "Hide Grades" : {
       "localizations" : {
         "ar" : {
@@ -26740,6 +26772,9 @@
         }
       }
     },
+    "Invalid Grade" : {
+
+    },
     "It seems there aren't any valid submissions to grade." : {
       "localizations" : {
         "ar" : {
@@ -27256,6 +27291,7 @@
 
     },
     "Letter grade" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -33671,6 +33707,7 @@
       }
     },
     "Percent (%)" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -35975,6 +36012,7 @@
       }
     },
     "Prompts for an updated grade" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -37253,6 +37291,9 @@
           }
         }
       }
+    },
+    "Reset Status" : {
+
     },
     "Retry" : {
       "localizations" : {
@@ -38795,6 +38836,9 @@
           }
         }
       }
+    },
+    "Select Grade" : {
+
     },
     "Select to change the roll call date" : {
       "localizations" : {
@@ -48289,6 +48333,12 @@
 
     },
     "Word Count" : {
+
+    },
+    "Write percentage here" : {
+
+    },
+    "Write score here" : {
 
     },
     "Write your Comment here" : {
