--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -118,6 +118,9 @@
     "Arizona (-07:00)" : {
 
     },
+    "Ask a question" : {
+
+    },
     "Assignment due dates" : {
 
     },
@@ -131,9 +134,6 @@
 
     },
     "Assignment Successfully Submitted!" : {
-
-    },
-    "Assist" : {
 
     },
     "Astana (+05:00/+05:00)" : {
@@ -364,9 +364,6 @@
     "Enable iOS Notifications" : {
 
     },
-    "Enter a Prompt" : {
-
-    },
     "Error" : {
 
     },
@@ -476,6 +473,9 @@
 
     },
     "I'm not able to rephrase this content" : {
+
+    },
+    "IgniteAI" : {
 
     },
     "Important" : {
@@ -1003,9 +1003,6 @@
 
     },
     "Total: %@" : {
-
-    },
-    "Try Again" : {
 
     },
     "Ulaanbaatar (+08:00/+08:00)" : {
