Handle fractional late days.
refs: MBL-19082
affects: Teacher
release note: Added support for fractional late days number to SpeedGrader.

test plan:
- Change grade penalty to be measure in hours instead of days in web gradebook.
- Open web SpeedGrader and make the submission late by 12 hours.
- Open teacher app and check the same submission.
- Late days should show 0.5.
- Edit late days to 0.25 in the app.
- Go to web, refresh SpeedGrader.
- Late hours shold show 6 hours.
- Late penalty score should also match between app and web.

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -784,7 +784,11 @@
         }
       }
     },
+    "%lf days late." : {
+
+    },
     "%lld days late." : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "variations" : {
