Modernized SpeedGrader: Rubrics Section Redesigned (#3531)
refs: MBL-18834
affects: Teacher
release note: Introduced new design for SpeedGrader rubrics.

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -20527,6 +20527,9 @@
         }
       }
     },
+    "g_pts" : {
+
+    },
     "GPA" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -31151,6 +31154,9 @@
         }
       }
     },
+    "Note" : {
+
+    },
     "OK" : {
       "localizations" : {
         "ar" : {
@@ -37813,6 +37819,9 @@
           }
         }
       }
+    },
+    "Rubric Note" : {
+
     },
     "Saving days late." : {
 
