Adding the ability to select a block of text and query ignite for more information [ignore-commit-lint]

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -379,6 +379,9 @@
     "Excused" : {
 
     },
+    "Explain this" : {
+
+    },
     "External tool" : {
 
     },
@@ -461,6 +464,9 @@
 
     },
     "hours" : {
+
+    },
+    "How can I help with the text you've selected?" : {
 
     },
     "How can I help you with this page?" : {
