Backing up and adding back the IgniteAI symbol to the menu and then letting the user choose to explain the text or ask another question about it [ignore-commit-lint]

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "\n\nHow can I help with this?" : {
+
+    },
     "-" : {
 
     },
@@ -464,9 +467,6 @@
 
     },
     "hours" : {
-
-    },
-    "How can I help with the text you've selected?" : {
 
     },
     "How can I help you with this page?" : {
