--- a/Student/SubmitAssignment/Localizable.xcstrings
+++ b/Student/SubmitAssignment/Localizable.xcstrings
@@ -856,7 +856,7 @@
         "es-ES" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Curso"
+            "value" : "Asignatura"
           }
         },
         "fi" : {
