[Horizon] Text Selection in Assist (#3546)
* WIP [ignore-commit-lint]

* Adding the ability to select a block of text and query ignite for more information [ignore-commit-lint]

* Making it so selecting Explain This is a menu option that opens Assist [ignore-commit-lint]

* Backing up and adding back the IgniteAI symbol to the menu and then letting the user choose to explain the text or ask another question about it [ignore-commit-lint]

* Satisfying lint [ignore-commit-lint]

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "\n\nHow can I help with this?" : {
+
+    },
     "-" : {
 
     },
@@ -377,6 +380,9 @@
 
     },
     "Excused" : {
+
+    },
+    "Explain this" : {
 
     },
     "External tool" : {
