SpeedGrader - Add support for custom grading schemes (#3543)
refs: MBL-19074
affects: Teacher, Student, Parent
release note: none

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -5,7 +5,7 @@
 
     },
     "%@ to %@" : {
-      "comment" : "'100% to 94%', or '400 to 230 pts'",
+      "comment" : "'100% to 94%', or '400 to 230'",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -1782,11 +1782,8 @@
         }
       }
     },
-    "%lld%%" : {
-
-    },
     "< %@ to %@" : {
-      "comment" : "'< 94% to 84%', or '< 230 to 160 pts'",
+      "comment" : "'< 94% to 84%', or '< 230 to 160'",
       "localizations" : {
         "en" : {
           "stringUnit" : {
