Fix minor localization issues
affects: Student, Teacher, Parent
[ignore-commit-lint]

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -41625,6 +41625,9 @@
         }
       }
     },
+    "Score" : {
+
+    },
     "Scored above..." : {
       "localizations" : {
         "ar" : {
