Add textfield refocus

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -41117,6 +41117,9 @@
     "Rubric Note" : {
 
     },
+    "Saving" : {
+
+    },
     "Saving days late." : {
       "localizations" : {
         "ar" : {
