Unify common localized formats (#3553)
affects: Student, Teacher, Parent
[ignore-commit-lint]

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -22552,9 +22552,6 @@
         }
       }
     },
-    "g_pts" : {
-
-    },
     "GPA" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -41624,6 +41621,9 @@
           }
         }
       }
+    },
+    "Score" : {
+
     },
     "Scored above..." : {
       "localizations" : {
