fix: review comments

--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -88615,6 +88615,9 @@
         }
       }
     },
+    "Oops, something went wrong" : {
+
+    },
     "Oops!" : {
       "comment" : "Error message title\n   Error title\n   Masquerade error title",
       "extractionState" : "manual",
@@ -126785,6 +126788,9 @@
           }
         }
       }
+    },
+    "There was an error while logging you in. You can try again, or come back a bit later." : {
+
     },
     "There's nothing to be notified of yet." : {
       "localizations" : {
