--- a/Parent/Parent/Localizable.xcstrings
+++ b/Parent/Parent/Localizable.xcstrings
@@ -2050,7 +2050,7 @@
       }
     },
     "Alerts" : {
-      "comment" : "Alerts Tab",
+      "comment" : "Tab title, max character count is 14",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -3587,7 +3587,7 @@
       }
     },
     "Calendar" : {
-      "comment" : "Calendar Tab",
+      "comment" : "Tab title, max character count is 14",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -6149,7 +6149,7 @@
       }
     },
     "Courses" : {
-      "comment" : "Courses Tab",
+      "comment" : "Tab title, max character count is 14",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
